--- a/biography.html
+++ b/biography.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title> Jane Doe Biography Page</title>
+    <link href="biographycss.css" rel="stylesheet" />
+  </head>
+
+<!--
+Created by: Stacey Wilson
+File: biography.html
+Date: 19/10/2025  
+Desc: This is the main html file for the 'Styling a biography page'
+from mdn for my web dev course. 
+(mdn challenge - Styling a biography page)
+-->
+
 <h1>Jane Doe</h1>
 <div class="job-title">Web Developer</div>
 <p>
