--- a/biography.html
+++ b/biography.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Jane Doe Biography Page</title>
+    <title> Biography Page</title>
     <link href="biographycss.css" rel="stylesheet" />
   </head>
 
@@ -15,7 +15,7 @@ from mdn for my web dev course.
 (mdn challenge - Styling a biography page)
 -->
 
-<h1>Jane Doe</h1>
+<h1>Stacey Wilson</h1>
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
